--- a/src/app/login-page/login-page.component.scss
+++ b/src/app/login-page/login-page.component.scss
@@ -29,6 +29,10 @@ h1 {
         height: 70%;
     }
     // Forms para login
+    #info-login {
+        margin: 2% 5% 5% 0%;
+    }
+
     .form-login {
         display: flex;
         flex-direction: column;
