Update footer com meu nome

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,4 @@
 <hr class="solid">
 
 <p>Texto destinado a exibição das informações relacionadas à <strong>licença de uso.</strong></p>
+<p>Gustavo Gonçalves Borges</p>
